testapp/deployment-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-a
  labels:
    app: testapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      name: testapp
      labels:
        app: testapp
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1"
      nodeSelector:
        topology.kubernetes.io/zone: ru-central1-a
