testapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: testapp
  type: ClusterIP
