testapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: testapp.dacdevops.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: testapp
                port:
                  name: http
